230516 미디어보드 수정

--- a/index.html
+++ b/index.html
@@ -51,13 +51,33 @@
               </div>
               <div class="mid_menu">
                 <div class="menu_slick">
-                  <div><img src="./img/img_01.JPG" alt="" /></div>
-                  <div><img src="./img/img_02.JPG" alt="" /></div>
-                  <div><img src="./img/img_03.JPG" alt="" /></div>
-                  <div><img src="./img/img_04.JPG" alt="" /></div>
-                  <div><img src="./img/img_05.JPG" alt="" /></div>
-                  <div><img src="./img/img_06.JPG" alt="" /></div>
+                  <!-- for문 구간 데이터 받아서 슬릭 -->
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <div class="sl_box">
+                    <div class="slick_inner_box"></div>
+                  </div>
+                  <!-- for문 구간 데이터 받아서 슬릭 -->
                 </div>
+              </div>
+              <div class="footer_menu">
+                <div class="intro_menu"></div>
               </div>
             </div>
           </div>
