230516 미디어보드 추가

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
             </div>
             <div class="in_left_box">
               <div class="top_menu">
-                <img src="./img/Banner.jpg" alt="" />
+                <img src="./img/Banner_v2.jpg" alt="" />
               </div>
+              <button id="prev">
+                <img src="./img/arrw-pre-b.png" alt="" />
+              </button>
+              <button id="next">
+                <img src="./img/arrw-nxt-b.png" alt="" />
+              </button>
               <div class="mid_menu">
                 <div class="menu_slick">
                   <!-- for문 구간 데이터 받아서 슬릭 -->
@@ -76,8 +82,38 @@
                   <!-- for문 구간 데이터 받아서 슬릭 -->
                 </div>
               </div>
+              <button id="prev_v2">
+                <img src="./img/arrw-pre-b.png" alt="" />
+              </button>
+              <button id="next_v2">
+                <img src="./img/arrw-nxt-b.png" alt="" />
+              </button>
               <div class="footer_menu">
-                <div class="intro_menu"></div>
+                <div class="intro_slick">
+                  <!-- for문 구간 데이터 받아서 슬릭 -->
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <div class="intro_box">
+                    <div class="intro_inner_box"></div>
+                  </div>
+                  <!-- for문 구간 데이터 받아서 슬릭 -->
+                </div>
               </div>
             </div>
           </div>
