--- a/index.html
+++ b/index.html
@@ -49,70 +49,82 @@
               <div class="top_menu">
                 <img src="./img/Banner_v2.jpg" alt="" />
               </div>
-              <button id="prev">
-                <img src="./img/arrw-pre-b.png" alt="" />
-              </button>
-              <button id="next">
-                <img src="./img/arrw-nxt-b.png" alt="" />
-              </button>
-              <div class="mid_menu">
-                <div class="menu_slick">
-                  <!-- for문 구간 데이터 받아서 슬릭 -->
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
+
+              <div class="mid_box">
+                <div class="mid_menu">
+                  <div class="menu_slick">
+                    <!-- for문 구간 데이터 받아서 슬릭 -->
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <div class="sl_box">
+                      <div class="slick_inner_box"></div>
+                    </div>
+                    <!-- for문 구간 데이터 받아서 슬릭 -->
                   </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <div class="sl_box">
-                    <div class="slick_inner_box"></div>
-                  </div>
-                  <!-- for문 구간 데이터 받아서 슬릭 -->
+                </div>
+
+                <div class="mid_button">
+                  <button id="prev">
+                    <img src="./img/arrw-pre-b.png" alt="" />
+                  </button>
+                  <button id="next">
+                    <img src="./img/arrw-nxt-b.png" alt="" />
+                  </button>
                 </div>
               </div>
-              <button id="prev_v2">
-                <img src="./img/arrw-pre-b.png" alt="" />
-              </button>
-              <button id="next_v2">
-                <img src="./img/arrw-nxt-b.png" alt="" />
-              </button>
-              <div class="footer_menu">
-                <div class="intro_slick">
-                  <!-- for문 구간 데이터 받아서 슬릭 -->
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
+
+              <div class="footer_box">
+                <div class="footer_menu">
+                  <div class="intro_slick">
+                    <!-- for문 구간 데이터 받아서 슬릭 -->
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <div class="intro_box">
+                      <div class="intro_inner_box"></div>
+                    </div>
+                    <!-- for문 구간 데이터 받아서 슬릭 -->
                   </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <div class="intro_box">
-                    <div class="intro_inner_box"></div>
-                  </div>
-                  <!-- for문 구간 데이터 받아서 슬릭 -->
+                </div>
+
+                <div class="footer_button">
+                  <button id="prev_v2">
+                    <img src="./img/arrw-pre-b.png" alt="" />
+                  </button>
+                  <button id="next_v2">
+                    <img src="./img/arrw-nxt-b.png" alt="" />
+                  </button>
                 </div>
               </div>
             </div>
@@ -129,7 +141,9 @@
                 <button>삭제</button>
               </div>
             </div>
-            <div class="in_right_box"></div>
+            <div class="in_right_box">
+              <div class="right_inner_box">테이블 작업장소</div>
+            </div>
           </div>
         </div>
       </main>
