--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
           <div class="pop_inner">
             <div class="pop_tit_box">
               <h3>파일 업로드</h3>
+              <button class="pop_save">저장</button>
               <button id="closePopup">취소</button>
             </div>
             <div class="pop_content">
